# kson

./: .gitattributes  .gitignore  LICENSE  build.gradle.kts  detekt-baseline.xml  detekt.kson  detekt.yml  gradle.properties  gradlew  gradlew.bat  jdk.properties  readme.md  settings.gradle.kts
.circleci/: config.kson  config.yml
architecture/: cross-language-api.md
assets/logo/: generate.sh  readme.md
buildSrc/: .gitignore  build.gradle.kts  gradlew  gradlew.bat  settings.gradle.kts
buildSrc/bindings/: build.gradle.kts  readme.md
buildSrc/src/main/kotlin/: CopyNativeArtifactsTask.kt  CopyNativeArtifactsToBindingsTask.kt  CopyNativeHeaderTask.kt  CopyRepositoryFilesTask.kt  GenerateJsonTestSuiteTask.kt  KsonBindings.kt  PixiExecTask.kt  PixiWrapperTask.kt  TranspileKsonToYaml.kt  VerifyCleanCheckoutTask.kt
buildSrc/src/test/kotlin/: GenerateJsonTestSuiteTaskTest.kt  PixiExecTaskTest.kt  PixiWrapperTaskTest.kt  PlaceholderTest.kt  TranspileKsonToYamlTest.kt  VerifyCleanCheckoutTaskTest.kt
buildSrc/support/jsonsuite/: .gitignore  ensure_suite.sh  readme.md
cli/: build.gradle.kts
docs/: readme.md  release_process.md
kson-http/: build.gradle.kts  kson-api-schema.json  readme.md
kson-lib/: build.gradle.kts  detekt-baseline.xml  pixi.toml  pixiw.bat
kson-lib-http/: build.gradle.kts  readme.md
kson-service-api/: build.gradle.kts  readme.md
kson-service-tests/: build.gradle.kts  readme.md
kson-tooling-lib/: build.gradle.kts  detekt-baseline.xml  readme.md
lib-kotlin/: build.gradle.kts
lib-python/: .gitignore  MANIFEST.in  build.gradle.kts  build_backend.py  lib.py  pyproject.toml  readme.md  setup.cfg  smoke_test.py  uvw  uvw.bat
lib-python/kson-lib-tests/: build.gradle.kts
lib-python/kson-lib-tests/src/jvmTest/kotlin/: ServerExtension.kt  SmokeTest.kt
lib-python/src/kson/: __init__.py
lib-python/stubs/cffi/: __init__.pyi
lib-python/tests/: api_server.py  smoke_test.py  test_build_backend.py
lib-rust/: .gitignore  Cargo.toml  build.gradle.kts  build.rs  pixi.toml  pixiw  pixiw.bat  readme.md
lib-rust/kson/: Cargo.toml  build.rs  readme.md
lib-rust/kson-lib-tests/: build.gradle.kts
lib-rust/kson-lib-tests/src/jvmTest/kotlin/: ServerExtension.kt
lib-rust/kson-sys/: Cargo.toml  build.rs
lib-rust/kson-test-server/: Cargo.toml
lib-rust/kson-test-server/src/: main.rs
lib-rust/kson/src/: lib.rs  macros.rs  test.rs  util.rs
lib-rust/src/: lib.rs  macros.rs  test.rs  util.rs
native-tests/: build.gradle.kts  readme.md
src/commonTest/resources/: readme.md
src/commonTest/resources/JSONTestSuite/: JSONTestSuite-LICENSE  parsing-test-cases-list-skipped.txt  parsing-test-cases-list.txt  readme.md
src/jsMain/kotlin/org.kson.mpp/: JsShim.kt
src/nativeMain/kotlin/org.kson.mpp/: NativeShim.kt
tooling/: readme.md
tooling/bindings/kson-py/: main.py  pyproject.toml
tooling/bindings/kson-rs/: build.rs
tooling/bindings/kson-rs/src/: test.rs
tooling/cli/: build.gradle.kts  gradle.properties  pixi.toml  pixiw  pixiw.bat  readme.md
tooling/jetbrains/: build.gradle.kts  detekt-baseline.xml  gradle.properties  readme.md
tooling/language-server-protocol/: .mocharc.json  README.md  build.gradle.kts  package-lock.json  package.json  pixi.toml  pnpm-lock.yaml
tooling/language-server-protocol/examples/: .kson-schema.kson  README.md
tooling/language-server-protocol/examples/config/: app.config.kson
tooling/language-server-protocol/examples/schemas/: config.schema.kson
tooling/language-server-protocol/src/: index.browser.ts  index.node.ts  index.ts  startKsonServer.ts
tooling/language-server-protocol/src/core/: KsonSettings.ts  formattingStyle.ts
tooling/language-server-protocol/src/test/: BaseConnectionStub.ts  BoilerplateConnectionStub.ts  ConnectionStub.ts  TestHelpers.ts
tooling/lsp-clients/: build.gradle.kts  package-lock.json  package.json  pixi.toml  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  tsconfig.json
tooling/lsp-clients/demos/: package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  readme.md
tooling/lsp-clients/demos/iframe/: index.html  main.js  package-lock.json  package.json  pnpm-lock.yaml  readme.md  styles.css  vite.config.ts
tooling/lsp-clients/demos/react/: index.html  main.tsx  package-lock.json  package.json  pnpm-lock.yaml  readme.md  styles.css  vite.config.ts
tooling/lsp-clients/demos/tests/: iframe.spec.ts  library.spec.ts  react.spec.ts  vanilla.spec.ts
tooling/lsp-clients/demos/vanilla/: index.html  main.ts  package-lock.json  package.json  pnpm-lock.yaml  readme.md  styles.css
tooling/lsp-clients/monaco/: .gitignore  index.html  kson-editor.html  package-lock.json  package.json  playwright.config.ts  readme.md  tsconfig.json  vite.config.js  vite.config.ts  vite.demo-iframe.config.ts  vite.demo-library.config.ts  vite.iframe-client.config.ts  vite.iframe.config.ts  vitest.config.ts
tooling/lsp-clients/monaco/src/: KsonEditorManager.ts  TabBar.test.ts  TabBar.ts  YamlEditorManager.ts  attachKsonLsp.test.ts  attachKsonLsp.ts  bundledSchemas.test.ts  bundledSchemas.ts  index.ts  lspRegistry.test.ts  lspRegistry.ts  wrapperKson.ts  (+1 more)
tooling/lsp-clients/shared/: package.json  tsconfig.json
tooling/lsp-clients/vscode/: .gitignore  esbuild.js  esbuild.ts  package.json  readme.md  tsconfig.json
tooling/lsp-extensions/: build.gradle.kts  package-lock.json
tooling/lsp-extensions/monaco/: package.json
tooling/lsp-extensions/shared/: build.gradle.kts  package.json
tooling/lsp-extensions/vscode/: .vscodeignore  esbuild.js  package.json  readme.md  tsconfig.json
tooling/public-api-metadata-collector/: build.gradle.kts
tooling/vs-code/: .gitignore  .vscode-test.js  .vscodeignore  LICENSE  build.gradle.kts  esbuild.js  kson-vscode-plugin-0.0.1.vsix  package-lock.json  package.json  tsconfig.json
tooling/vs-code/config/: kson.tmLanguage.json
tooling/vs-code/test/: index.common.ts  index.ts  runExtension.ts  runTests.ts  runVsixTests.ts
(+608 files in other folders)
