[project]
name = "kson"
version = "0.1.0"
description = "A love letter to the humans maintaining computer configuration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cffi>=1.17.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]
