[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "kson"
version = "0.1.2.dev0"
description = "A love letter to the humans maintaining computer configuration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cffi>=1.17.1",
]

[tool.setuptools]
packages = ["kson"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
kson = ["kson_api.h", "kson.dll", "libkson.dylib", "libkson.so"]

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]
