[project]
name = "kson-lang"
# [[kson-version-num]]
version = "0.3.0.dev0"
authors = [
  { name="KSON", email="kson@kson.org" },
]
description = "KSON: a next-gen configuration language and love letter to the humans maintaining computer configuration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cffi>=1.17.1",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: File Formats :: JSON",
    "Topic :: File Formats :: JSON :: JSON Schema",
    "Topic :: Text Processing :: Markup",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
license = "Apache-2.0"
license-files = ["LICENSE*"]

[project.urls]
Homepage = "https://github.com/kson-org/kson"
Issues = "https://github.com/kson-org/kson/issues"


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "build_backend"
backend-path = ["."]

[tool.setuptools]
packages = ["kson"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
kson = ["kson_api.h", "kson.dll", "libkson.dylib", "libkson.so", "jni_simplified.h"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.cibuildwheel]
# One wheel targeting 3.10 is sufficient: the abi3 stable ABI tag (see setup.py)
# makes it installable on any CPython >= 3.10.
build = "cp310-*"
skip = "*-musllinux_*"
archs = "native"
test-requires = "pytest"
test-command = "pytest -v {project}/tests --ignore={project}/tests/test_build_backend.py"

[tool.cibuildwheel.macos]
# Pin deployment target so builds don't break when the host macOS is
# newer than what the Python packaging tools recognize yet.
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
    "setuptools>=61.0",
    "cibuildwheel>=2.16.0",
    "twine>=6.2.0",
]
