[package]
name = "kson"
version = "0.1.0"
edition = "2024"

[features]
default = []
dynamic-linking = ["dep:libloading"]

[target.'cfg(not(target_os = "windows"))'.dependencies]
libloading = { version = "0.8.8", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
libloading = "0.8.8"

[build-dependencies]
bindgen = "0.71.0"

[dev-dependencies]
insta = "1.43.1"
