[package]
name = "kson-sys"
# [[kson-version-num]]
version = "0.3.0-dev"
edition = "2024"
links = "kson"
description = "Rust bindings to kson-lib"
license = "Apache-2.0"

[features]
default = []
dynamic-linking = []

[build-dependencies]
bindgen = "0.71.0"
flate2 = "1.1.2"
tar = "0.4"
ureq = "3.1.2"
