[package]
name = "kson-test-server"
version = "0.1.0"
edition = "2024"

[profile.release]
rpath = true

[dependencies]
kson = { package = "kson-rs", path = "../kson" }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
