[package]
name = "kson-rs"
version = "0.2.0"
edition = "2024"
description = "Idiomatic Rust bindings to kson-lib"
license = "Apache-2.0"

[features]
default = []
dynamic-linking = ["kson-sys/dynamic-linking", "dep:libloading"]

[dependencies]
kson-sys = { version = "0.2.0", path = "../kson-sys" }

[target.'cfg(not(target_os = "windows"))'.dependencies]
libloading = { version = "0.8.8", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
libloading = "0.8.8"

[dev-dependencies]
insta = "1.43.1"
